Alterate configuration .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,12 @@
 
 # Created by https://www.gitignore.io/api/node
 
-### Node ###
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
 # Dependency directories
 node_modules/
+lib/
 
-# Typescript v1 declaration files
-typings/
-
-# Optional npm cache directory
-.npm
-
-# dotenv environment variables file
-.env
-
+#files
+.config.json
+.my_flows.json.backup
 
 # End of https://www.gitignore.io/api/node
